[add] gomobile [refactor] create vpn_client class and move to all client code

--- a/etc/client.cfg
+++ b/etc/client.cfg
@@ -6,7 +6,7 @@
 # NOTE: That you MUST use TLS to ensure your traffic is secure, and that
 #       means that the websocket URI will have an "wss://" prefix.
 #
-vpn = wss://vpn.example.com/vpn
+vpn = ws://127.0.0.1:9000
 
 
 #
